--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-filemetadata"
+    "url": "https://github.com/NickP2791/fcc-microservices-assignment5.git"
   },
   "keywords": [
     "node",
